# dj-paypal

./: .flake8  .gitignore  .isort.cfg  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  example_settings.py  makemigrations.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
djpaypal/: __init__.py  admin.py  checks.py  enums.py  exceptions.py  models.py  settings.py  utils.py  views.py
djpaypal/management/commands/: djpaypal_delete_all_test_data.py  djpaypal_download_plans.py  djpaypal_sync_plans.py  djpaypal_upload_plans.py
djpaypal/migrations/: 0001_initial.py  0002_billingagreement_end_of_period.py  0002_payer_time_created.py  0003_auto_20180320_0902.py  0003_webhookeventtrigger_remote_ip.py  0004_auto_20180323_2137.py  0005_auto_20180909_2213.py  0005_auto_20180919_1447.py  0006_auto_20181001_1147.py  0007_sale_invoice_number.py  0009_shipping_address_null.py  0012_billing_agreement_state.py  0013_billing_agreement_plan_model.py
djpaypal/models/: __init__.py  base.py  billing.py  disputes.py  payer.py  payments.py  webhooks.py
src/djpaypal/: __init__.py  admin.py  checks.py  exceptions.py  fields.py  utils.py
src/djpaypal/migrations/: 0001_initial.py  0003_auto_20180320_0902.py  0004_auto_20180323_2137.py  0008_refund_refund_to_payer.py  0010_payment_hold.py  0011_disputes.py  0014_use_models_jsonfield.py
src/djpaypal/models/: __init__.py  billing.py  payer.py  webhooks.py
tests/: conftest.py  settings.py  test_admin.py  test_billing.py  test_payments.py  test_webhooks.py  urls.py
tests/fixtures/: rest.billingagreement.execute.json  rest.billingplan.all.active.json
tests/fixtures/webhooks/: billing.plan.created.json  billing.plan.updated.json  billing.subscription.cancelled.json  billing.subscription.created.json  billing.subscription.re-activated.json  billing.subscription.suspended.json  billing.subscription.updated.json  customer.dispute.created--2019-11.json  customer.dispute.created--ppra214.json  customer.dispute.created.json  customer.dispute.resolved.json  identity.authorization-consent.revoked.json  invoicing.invoice.cancelled.json  invoicing.invoice.created.json  invoicing.invoice.paid.json  invoicing.invoice.refunded.json  invoicing.invoice.updated.json  merchant.onboarding.completed.json  payment.authorization.created.json  payment.authorization.voided.json  payment.capture.completed.json  payment.capture.denied.json  payment.capture.pending.json  payment.capture.refunded.json  payment.capture.reversed.json  payment.order.cancelled.json  payment.order.created.json  payment.payouts-item.blocked.json  payment.payouts-item.canceled.json  payment.payouts-item.denied.json  payment.payouts-item.failed.json  payment.payouts-item.held.json  payment.payouts-item.refunded.json  payment.payouts-item.returned.json  payment.payouts-item.succeeded.json  payment.payouts-item.unclaimed.json  payment.payoutsbatch.denied.json  payment.payoutsbatch.processing.json  payment.payoutsbatch.success.json  payment.sale.completed--from-subscription.json  (+9 more)
(+10 files in other folders)
