[tool.poetry]
name = "dj-paypal"
version = "0.15.0-rc2"
description = "Django / Paypal integration (based on dj-stripe)"
authors = [
	"Benedict Etzel <benedict@hearthsim.net>",
	"Jerome Leclanche <jerome@leclan.ch>"
]
readme = "README.md"
repository = "https://github.com/dj-stripe/dj-paypal"
keywords = ["django", "paypal", "payments"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Web Environment",
	"Framework :: Django",
	"Framework :: Django :: 2.0",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.6",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Office/Business :: Financial"
]
packages = [
    { include = "djpaypal", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.6"
django = ">=2.2"
paypalrestsdk = ">=1.13.1"
python-dateutil =">= 2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

