[metadata]
name = dj-paypal
version = 0.0.1
description = Django / Paypal integration (based on dj-stripe)
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/dj-stripe/dj-paypal/
download_url = https://github.com/dj-stripe/dj-paypal/tarball/master
keywords = django, paypal, payments
classifiers =
	Development Status :: 1 - Planning
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Topic :: Office/Business :: Financial
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Framework :: Django
	Framework :: Django :: 1.11

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	Django >= 1.11
	dj-stripe >= 1.0.0
	paypalrestsdk >= 1.13.1

[options.packages.find]
exclude =
	tests
	tests.*
