[metadata]
name = dj-paypal
version = 0.11.1
description = Django / Paypal integration (based on dj-stripe)
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/dj-stripe/dj-paypal/
download_url = https://github.com/dj-stripe/dj-paypal/tarball/master
keywords = django, paypal, payments
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.0
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Office/Business :: Financial

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	Django >= 2.0
	paypalrestsdk >= 1.13.1
	python-dateutil >= 2.6.1

[options.packages.find]
exclude =
	tests
	tests.*
